--- a/ChessKing/ChessKing.csproj
+++ b/ChessKing/ChessKing.csproj
@@ -48,6 +48,10 @@
     <Compile Include="Bishop.cs" />
     <Compile Include="Castle.cs" />
     <Compile Include="Chess.cs" />
+    <Compile Include="ChessSquare.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Common.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
