--- a/ChessKing/ChessKing.csproj
+++ b/ChessKing/ChessKing.csproj
@@ -70,7 +70,9 @@
     <Compile Include="frmChessKing.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="frmChessKing.Designer.cs" />
+    <Compile Include="frmChessKing.Designer.cs">
+      <DependentUpon>frmChessKing.cs</DependentUpon>
+    </Compile>
     <Compile Include="King.cs" />
     <Compile Include="Knight.cs" />
     <Compile Include="Pawn.cs" />
@@ -79,7 +81,9 @@
     <Compile Include="Queen.cs" />
     <EmbeddedResource Include="Form2.resx" />
     <EmbeddedResource Include="Form3.resx" />
-    <EmbeddedResource Include="frmChessKing.resx" />
+    <EmbeddedResource Include="frmChessKing.resx">
+      <DependentUpon>frmChessKing.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
