--- a/ChessKing/ChessKing.csproj
+++ b/ChessKing/ChessKing.csproj
@@ -154,6 +154,9 @@
     <Content Include="Image\Chess_rlt60.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Image\circle.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
